--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
+                    <finalName>mixtapeApp</finalName>
                     <archive>
                         <manifest>
                             <mainClass>author.paulo.main.MixtapeApp</mainClass>
@@ -29,6 +30,7 @@
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
+                    <appendAssemblyId>false</appendAssemblyId>
                 </configuration>
             </plugin>
         </plugins>
